[project]
name = "labutils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
[tool.setuptools.package-data]
"labutils" = ["plot_template.json"]
dependencies = [
  "numpy",
  "plotly==5.24.1",
  "polars",
  "lmfit",
  "xlsxwriter",
  "fastexcel",
  "kaleido==0.2.1"
]
